Настройка Nginx на взаимодействие по HTTPS

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,11 @@ http
 {
   server
   {
-    listen 80;
+    listen 443 ssl;
+    server_name example;
+
+    ssl_certificate /etc/ssl/certs/certificate_xsoft.pem;
+    ssl_certificate_key /etc/ssl/certs/key_certificate_xsoft.pem;
 
     location /
     {
